objects/APTSECOM_Product_Recommendation__c.object
<CustomObject>
    <fields>
        <fullName>APTSECOM_Category_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category ID</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Product Recommendations</relationshipLabel>
        <relationshipName>Product_Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTSECOM_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Add-on Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Recommended In Stores</relationshipLabel>
        <relationshipName>Recommended_In_Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTSECOM_Recommendation_Type__c</fullName>
        <label>Recommendation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top Deal</fullName>
                </value>
                <value>
                    <fullName>Past Order</fullName>
                </value>
                <value>
                    <fullName>Special Pick</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTSECOM_Source_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product based on which recommended Product is offered.</description>
        <label>Source Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Recommendations (Source Product)</relationshipLabel>
        <relationshipName>Product_Recommendations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTSECOM_Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store</label>
        <referenceTo>APTSECOM_Store__c</referenceTo>
        <relationshipLabel>Product Recommendations</relationshipLabel>
        <relationshipName>Product_Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Can_be_added_Operation__c</fullName>
        <label>Can only be added with Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_only_be_added_with__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Premium Analytical can only be selected if Single State Analytical or All States Analytical is selected as it is complimentary to those packages.</inlineHelpText>
        <label>Can only be added with</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Product Recommendations (Can only be added with)</relationshipLabel>
        <relationshipName>Product_Recommendations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cannot_be_combined_with__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>All States Analytical is selected then Single State Analytical and National Analytical cannot be selected as additional add-ons.</inlineHelpText>
        <label>Cannot be combined with</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Product Recommendations</relationshipLabel>
        <relationshipName>Product_Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cannot_combined_Operation__c</fullName>
        <label>Cannot be combined with Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Product Recommendations (Plan)</relationshipLabel>
        <relationshipName>Product_Recommendations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rule_Description__c</fullName>
        <label>Rule Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product Recommendation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPR-{00000}</displayFormat>
        <label>Product Recommendation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>